Fix 800-1030 header items cutoff

--- a/src/index.css
+++ b/src/index.css
@@ -203,6 +203,10 @@ body {
     margin-right: 5vw;
   }
 
+  .header {
+    height: 25%;
+  }
+
   header .primary-nav {
     margin-right: 5vw;
   }
